--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1321,7 +1321,7 @@ div#mCSB_1_container{
 .banner-section{
   position: relative;
   background: #fff;
-  padding: 60px 0px 100px 0px;
+  padding: 60px 0px 25px 0px;
 }
 
 .banner-section .content-box .btn-box .video-btn{
@@ -1650,7 +1650,7 @@ div#mCSB_1_container{
 .about-section{
   position: relative;
   background: #fff;
-  padding: 50px 0px 50px 0px;
+  padding: 50px 0px 60px 0px;
 }
 
 #content_block_01 .content-box .text{
@@ -1716,7 +1716,7 @@ div#mCSB_1_container{
 .process-section{
   position: relative;
   overflow: hidden;
-  padding: 50px 0px 50px 0px;
+  padding: 50px 0px 70px 0px;
 }
 
 #content_block_02 .content-box .sec-title{
@@ -1819,7 +1819,7 @@ div#mCSB_1_container{
 }
 
 #image_block_02 .image-box img{
-  width: 100%;
+  /* width: 100%; */
 }
 
 .process-section .pattern-box .pattern-1{
@@ -1837,7 +1837,7 @@ div#mCSB_1_container{
 .service-section{
   position: relative;
   background: #fff;
-  padding: 0px 0px 0px 0px;
+  padding: 50px 0px 50px 0px;
 }
 
 .service-section .sec-title{
@@ -1893,7 +1893,7 @@ div#mCSB_1_container{
 .testimonial-section{
   position: relative;
   background: #fff;
-  padding: 50px 0px 40px 0px;
+  /* padding: 50px 0px 40px 0px; */
 }
 
 .owl-dots-none .owl-dots,
@@ -1995,7 +1995,7 @@ div#mCSB_1_container{
 
 .project-section{
   position: relative;
-  padding: 0px 0px 0px 0px;
+  padding: 50px 0px 50px 0px;
 }
 
 .project-block-one .inner-box{
@@ -2126,7 +2126,7 @@ div#mCSB_1_container{
 
 .pricing-section{
   position: relative;
-  padding: 150px 0px 100px 0px;
+  /* padding: 150px 0px 100px 0px; */
   background: #fff;
 }
 
@@ -2308,7 +2308,7 @@ div#mCSB_1_container{
 
 .news-section{
   position: relative;
-  padding: 50px 0px 150px 0px;
+  padding: 50px 0px 60px 0px;
 }
 
 .news-section .sec-title{
@@ -2478,7 +2478,7 @@ div#mCSB_1_container{
 .cta-section{
   position: relative;
   overflow: hidden;
-  padding: 120px 0px;
+  padding: 60px 0px;
 }
 
 .cta-section .content-box{
@@ -2529,7 +2529,7 @@ div#mCSB_1_container{
 
 .main-footer .footer-top{
   position: relative;
-  padding: 120px 0px 90px 0px;
+  padding: 60px 0px 30px 0px;
   border-bottom: 1px solid #e6eaf1;
 }
 
@@ -2848,7 +2848,7 @@ div#mCSB_1_container{
 /** about-style-two **/
 
 .about-section.style-two{
-  padding: 90px 0px 100px 0px;
+  /* padding: 90px 0px 100px 0px; */
 }
 
 #image_block_03 .image-box{
