--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5096,3 +5096,24 @@ div#mCSB_1_container{
 .strenght-sec .service-block-one:hover .inner-box .icon-box .c-icon {
   fill: #6377EE !important;
 }
+
+/* .blog-image{
+  position: relative;
+  float: right;
+} */
+
+.blog-content{
+  padding: 60px 0px 0px 0px;
+}
+
+.blog-content .sec-title h2{
+  text-align: center;
+}
+
+.blog-content .blog-image{
+  margin-bottom: 30px;
+}
+
+.blog-content .content h3{
+  margin: 20px 0px 10px 0px;
+}
